[metadata]
name = identibooru
author = identibooru-dev
author-email = identibooru.staff@yandex.com
summary = identibooru
license = Copyright (C) 2020 identibooru-dev
description-file =
  README.md
home-page = https://identibooru-dev.github.io
requires-python = >=3.4
classifier =
  Development Status :: Rolling Release
  Programming Language :: Python
  Environment :: Console
[files]
packages =
  identibooru
data_files =
  templates = templates/*
  static = static/*
